tree-sitter-asciidoc/test/corpus/45.txt
=======|||
#45
=======|||

====
[mermaid]
----
----
====

// xxx

====
title
====
iblock
====
====

---|||

(document
  (block_element
    (section_block
      (delimited_block
        (delimited_block_start_marker)
        (section_block
          (element_attr
            (element_attr_marker)
            (positional_attr
              (block_style))
            (element_attr_marker))
          (listing_block
            (listing_block_start_marker)
            (listing_block_end_marker)))
        (delimited_block_end_marker))))
  (block_element
    (line_comment
      (line_comment_marker)
      (body)))
  (block_element
    (section_block
      (delimited_block
        (delimited_block_start_marker)
        (section_block
          (paragraph
            (line)))
        (delimited_block_end_marker))))
  (block_element
    (section_block
      (paragraph
        (line))))
  (block_element
    (section_block
      (delimited_block
        (delimited_block_start_marker)
        (delimited_block_end_marker)))))
