tree-sitter-asciidoc/test/corpus/admonition.txt
===========
admonition
===========


NOTE: aaaa
TIP: aaaa
IMPORTANT: aaaa
CAUTION: aaaa
WARNING: aaaa

NOTE: Line 1
    Line 2

-----

(document
  (block_element
    (section_block
      (admonition
        (admonition_note)
        (line))))
  (block_element
    (section_block
      (admonition
        (admonition_tip)
        (line))))
  (block_element
    (section_block
      (admonition
        (admonition_important)
        (line))))
  (block_element
    (section_block
      (admonition
        (admonition_caution)
        (line))))
  (block_element
    (section_block
      (admonition
        (admonition_warning)
        (line)))))
  (block_element
    (section_block
      (admonition
        (admonition_note)
        (line)
        (line)))))
