tree-sitter-asciidoc/test/corpus/listing_block.txt
================
listing_block
================

----
----

----
line
----

[, js]
----
function createElement(node) {
    if (typeof node == "string") { <0>
        return document.createTextNode(node)
    }

    const $el = document.createElement(node.type) <.>

    node.children <.>
        .map(createElement)
        .forEach($el.appendChild.bind($el));

    return $el;
}
----
<.> createTextNode
<.> 😄createElement
<.> 🐸createElement

..rawblock
....
rawblock
....

----
line of code // <1>
line of code # <2>
line of code ;; <3>
line of code <!--4-->
----
<1> A callout behind a line comment for C-style languages.
<2> A callout behind a line comment for Ruby, Python, Perl, etc.
<3> A callout behind a line comment for Clojure.
<4> A callout behind a line comment for XML or SGML languages like HTML.

-------------------

(document
  (block_element
    (section_block
      (listing_block
        (listing_block_start_marker)
        (listing_block_end_marker))))
  (block_element
    (section_block
      (listing_block
        (listing_block_start_marker)
        (listing_block_body)
        (listing_block_end_marker))))
  (block_element
    (section_block
      (element_attr
        (element_attr_marker)
        (positional_attr)
        (element_attr_marker))
      (listing_block
        (listing_block_start_marker)
        (listing_block_body
          (callout_marker)
          (callout_marker)
          (callout_marker))
        (listing_block_end_marker)
        (callout_list
          (callout_list_item
            (callout_list_marker)
            (line))
          (callout_list_item
            (callout_list_marker)
            (line))
          (callout_list_item
            (callout_list_marker)
            (line))))))
  (block_element
    (section_block
      (paragraph
        (line))))
  (block_element
    (section_block
      (literal_block
        (literal_block_marker)
        (literal_block_body)
        (literal_block_marker))))
  (block_element
    (section_block
      (listing_block
        (listing_block_start_marker)
        (listing_block_body
          (callout_marker)
          (callout_marker)
          (callout_marker)
          (callout_marker))
        (listing_block_end_marker)
        (callout_list
          (callout_list_item
            (callout_list_marker)
            (line))
          (callout_list_item
            (callout_list_marker)
            (line))
          (callout_list_item
            (callout_list_marker)
            (line))
          (callout_list_item
            (callout_list_marker)
            (line)))))))

================
multi chars
================

----
raw block
----

-----
raw block
-----

----
--------
----

--------

(document
  (block_element
    (section_block
      (listing_block
        (listing_block_start_marker)
        (listing_block_body)
        (listing_block_end_marker))))
  (block_element
    (section_block
      (listing_block
        (listing_block_start_marker)
        (listing_block_body)
        (listing_block_end_marker))))
  (block_element
    (section_block
      (listing_block
        (listing_block_start_marker)
        (listing_block_body)
        (listing_block_end_marker)))))
